[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "aps105-book"
authors = [{name = "Salma", email = "salma@ece.utoronto.ca"}]
dynamic = ["version", "description"]

[project.optional-dependencies]
doc = [
    "sphinx~=4.3.0",
    "myst-parser",
    "furo",
    "sphinx-book-theme",
    "jupyter-sphinx"
]

jupyter_sphinx_thebe_config = {
    'requestKernel': True,
    'binderOptions': {
        'repo': "binder-examples/requirements",
    },
}